opam-version: "2.0"
name: "opam-package-upgrade"
version: "0.1"
maintainer: "Louis Gesbert <louis.gesbert@ocamlpro.com>"
authors: "Louis Gesbert <louis.gesbert@ocamlpro.com>"
license: "GPL-3"
synopsis: "Tool to upgrade package definition files from 1.2 to 2.0 format"
homepage: "https://github.com/AltGr/opam-package-upgrade"
bug-reports: "https://github.com/AltGr/opam-package-upgrade/issues"
tags: ["org:ocamlpro" "flags:plugin"]
depends: [
  "opam-client" {>= "2.0.1"}
  "cmdliner"
  "dune"
]
build: ["dune" "build" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/AltGr/opam-package-upgrade.git"
